# Adversarial-Multi-Hop-Fact-Verification

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-colab.txt  requirements-ml.txt  requirements.txt
artifacts/: ablation_results.json  adversarial_traces.jsonl  calibration_eval.json  calibration_features_fever_dev.parquet  calibration_features_fever_train.parquet  calibration_features_hover_dev.parquet  calibration_training_log.json  corpus_encoding_meta_ft.json  decomposer_eval.json  decomposer_eval_gold.json  distractor_sanity_check.md  distractors_v3.json  eval_main.json  evidence_chain_render_examples.txt  evidence_chains.jsonl  failures_for_tagging.md  failures_tagged.json  human_eval_rendered.txt  human_eval_sample.csv  human_eval_summary.json  per_class_breakdown.json  per_subclaim_traces.jsonl  retrieval_eval_baseline.json  retriever_eval_finetune.json  retriever_finetune_log.jsonl  robustness_eval.json  softprompt_sanity.json  verifier_eval_phase07.json
checkpoints/: nei_classifier.joblib
configs/: default.yaml
docs/: ABLATION_TABLE.md  ARCHITECTURE.md  DECISIONS.md  ERROR_ANALYSIS.md  FINAL_REPORT.md  HANDOFF.md  HUMAN_EVAL_PROTOCOL.md  PHASE_00_setup.md  PHASE_01_data_corpus.md  PHASE_02_schema_pipeline.md  PHASE_03_decomposer.md  PHASE_04_retrieval_baseline.md  PHASE_05_DECISION.md  PHASE_05_retriever_finetune.md  PHASE_06_adversarial_distractors.md  PHASE_07_verifier_ensemble.md  PHASE_08_nei_calibration.md  PHASE_09_temporal.md  PHASE_10_evidence_chains.md  PHASE_11_evaluation.md  PHASE_12_ablation.md  PHASE_13_error_analysis.md  (+9 more)
(+73 files in other folders)
