[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-verification-v3"
version = "0.0.1"
description = "Multi-Hop Claim Verification with Adversarial Distractors"
requires-python = ">=3.11,<3.12"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
markers = [
    "smoke: integration smoke tests that gate every PR (must pass in <5 min)",
    "slow: long-running tests (>30s); excluded from `make test`",
]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
